--- a/src/index.html
+++ b/src/index.html
@@ -114,10 +114,12 @@
    
   <div class="todoList positionTodo">
     <div class="headTextPositionTwo">
+
+        <img class="squarePosition" src="./svg/arrow-square-left.svg" alt="arrow-square-left.svg.pic">
         <h3 class="headTextTwo"> New note </h3>
         
       </div>
-      <div class="blockPosition">
+      <div class="blockPositionTwo">
 
         <div>
        
