--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="./js/index.js"></script>
     <link rel="stylesheet" href="./fonts/stylesheet.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title>Task 9</title>
 </head>
 <body>
 
