Добавил обработчики сабытий для переходов

--- a/src/index.html
+++ b/src/index.html
@@ -32,26 +32,26 @@
             <h3 class="textCentre"> RUN </h3>   
         </div>
 
-        <div class="buttonPosition"><a class="button" href="">Homework</a></div>
+        <div id="bottanClear" class="buttonPosition"><a class="button" href="">Очистить список</a></div>
 
         <div class="textTwoPosition">
                 <p class="textTwoCentre"> BACKLOGS </p>
         </div>
 
-        <div class="blockPosition">
+        <div class="blockPosition table-scroll">
 
             <div>
            
-            <div class="block"> 
+            <!-- <div class="block"> 
 
-            </div>
+            </div> -->
 
             <div id="textMainGo"></div>
     </div>
     
         </div>
 
-        <div class="textTwoPosition">
+        <!-- <div class="textTwoPosition">
             <p class="textTwoCentre"> COMPLETED TASKS </p>
         </div>
 
@@ -63,11 +63,10 @@
                 <p>todo design</p>
             </div>
 
-        </div>
+        </div> -->
         <div id="bottanOne" class="buttonPositionDown"><a class="buttonDawnMain" >New</a></div>
   </div>
 
- 
   </div>
 
 <script   src="./js/index.js"></script>
