--- a/src/pagenote.html
+++ b/src/pagenote.html
@@ -11,10 +11,8 @@
 </head>
 <body>
 
-   
 <div  class="row">
     
-
   <div class="todoListTwo positionTodoTwo">
     <div class="headTextPositionTwo">
 
@@ -39,14 +37,13 @@
 
                 <p class="blockText">Priority</p>
 
-
                 <input class="ellipse leftZipper" type="radio" name="valueOne" id="valueOne" >
                 <input class="ellipse mainZipper" type="radio" name="valueTwo" id="valueTwo" >
                 <input class="ellipse mainZipper" type="radio" name="valueThree" id="valueThree" >
 
             </div>
 
-            <div   id="bottanSection" class="block blockTop"> 
+            <div class="block blockTop"> 
 
             <p class="blockText">Energy costs</p>
 
@@ -55,6 +52,16 @@
             <input class="ellipse mainZipper" type="radio" name="energyThree" id="energyThree" >
 
             </div>
+
+            <div   id="bottanSection" class="block blockTop"> 
+
+              <p class="blockText">День выполнения</p>
+  
+              <input class="ellipse leftZipper" type="radio" name="timeOne" id="timeOne" >
+              <input class="ellipse mainZipper" type="radio" name="timeTwo" id="timeTwo" >
+              <input class="ellipse mainZipper" type="radio" name="timeThree" id="timeThree" >
+  
+              </div>
 
       </div>
 
@@ -66,7 +73,7 @@
  
   </div>
 
-<script   src="./js/indexnote.js""></script>
+<script   src="./js/indexnote.js"></script>
            
 </body>
 </html>
