--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <script>
-        document.location.href = './src/index.html';
+        document.location.href = './dist/index.html';
     </script>
     
 </body>
