--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        document.location.href = './src/index.html';
+        document.location.href = './dist/index.html';
     </script>
 </body>
 </html>
